# itell-rs

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  build.sh  example.md
.claude/: settings.local.json
.github/workflows/: fetch-volume.yml
src/: cms.rs  frontmatter.rs  lib.rs  main.rs  page.rs
src/cms/: chunk.rs  fetch.rs  frontmatter.rs  healthcheck.rs  mod.rs  page.rs
srcts/: index.ts  package.json  plugin.ts  pnpm-lock.yaml  test.html  utils.ts
