[package]
name = "itell"
version = "0.1.0"
edition = "2021"
description = "iTELL's Rust SDK"
license = "MIT"

[dependencies]
anyhow = "1.0.86"
github-slugger = "0.1.0"
regex = "1.10.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.125"
serde_yaml_ng = "0.10.0"
thiserror = "1.0.63"
ureq = { version = "2.8.0", features = ["json"] }
